# music-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/logo/: preview.html
docs/: AI_PLAYBOOK.md  architecture.md  brand-kit.md  development.md  user-guide.md
music_cli/: __init__.py  cli.py  client.py  config.py  daemon.py  history.py
music_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
music_cli/context/: __init__.py
music_cli/player/: ffplay.py
music_cli/sources/: ai_generator.py  local.py  radio.py
tests/: __init__.py
